# pw_locker

./: .gitignore  LICENSE  README.md  SECURITY.md  migration.py  pw.bat  pw.py  pw_locker.py  pw_locker.pyw  pyproject.toml  requirements.txt  setup.py  users.db
.github/: dependabot.yml
.github/workflows/: tests.yml
password_locker/: __init__.py  __main__.py  cli.py  gui.py  gui_controller.py  paths.py  vault.py
tests/: test_cli.py  test_gui_controller.py  test_gui_import.py  test_packaging.py  test_vault.py
